--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@ayshptk/msngr": "^0.1.2",
-    "@candypay/checkout-sdk": "0.1.36",
-    "@candypay/react-checkout-pos": "^0.0.1",
+    "@candypay/checkout-sdk": "0.1.37",
+    "@candypay/react-checkout-pos": "0.0.4",
     "@candypay/react-checkout-sdk": "0.1.2",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
