--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@ayshptk/msngr": "^0.1.2",
     "@candypay/checkout-sdk": "0.1.51",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
     "axios": "^1.1.3",
+    "framer-motion": "^9.1.6",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
